# Genetic-Circuit-Simulator

./: README.md
Genetic_Circuit_Simulator/: CMakeLists.txt
Genetic_Circuit_Simulator/builds/: CMakeCache.txt  CTestTestfile.cmake  GeneticCircuit  Makefile  cmake_install.cmake  runTests
Genetic_Circuit_Simulator/include/: CycleDetector.h  Gene.h  GeneticCircuit.h
Genetic_Circuit_Simulator/src/: CycleDetector.cpp  Gene.cpp  GeneticCircuit.cpp  main.cpp
Genetic_Circuit_Simulator/tests/: test_CycleDetector.cpp  test_Gene.cpp  test_GeneticCircuit.cpp
